Navbar section added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Cara || E-Commerce</title>
   </head>
   <body>
+    <!-- ================Header Section ============ -->
     <!-- ============Navbar section =========== -->
     <section id="header">
       <a href="">
@@ -33,6 +34,7 @@
       </div>
     </section>
     <!-- ============Navbar section =========== -->
+    <!-- ================Header Section ============ -->
     <!-- Javascript Link  -->
     <script src="JS/Script.js"></script>
   </body>
