hero section complete with sticky navbar

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
       </div>
     </section>
     <!-- ============Navbar section =========== -->
+    <section id="hero">
+      <h4>Trade-in-Offer</h4>
+      <h2>Super Value Deals</h2>
+      <h1>On All Products</h1>
+      <p>Save more with coupons & Up to 70% Off!</p>
+      <button>Shop Now</button>
+    </section>
     <!-- ================Header Section ============ -->
     <!-- Javascript Link  -->
     <script src="JS/Script.js"></script>
