--- a/index.html
+++ b/index.html
@@ -215,6 +215,14 @@
     </section>
     <!-- ==================Featured Section =============== -->
 
+    <!-- ===========Banner Section================== -->
+    <section id="banner" class="section-m1">
+      <h4>Repair Service</h4>
+      <h2>Up to <span>70% Off</span> - All T-shirt & Accessories</h2>
+      <button class="normal">Explore More</button>
+    </section>
+    <!-- ===========Banner Section================== -->
+
     <!-- Javascript Link  -->
     <script src="JS/Script.js"></script>
   </body>
