Action Banner section added

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <p>Save more with coupons & Up to 70% Off!</p>
       <button>Shop Now</button>
     </section>
-    <!-- ================Header Section ============ -->
+    <!-- ================Header Section ============-->
 
-    <!-- ==============Features Section ============= -->
+    <!-- ==============Features Section =============-->
     <section id="features" class="section-p1">
       <div class="fea-box">
         <img src="img/features/f1.png" alt="" />
@@ -70,8 +70,8 @@
         <h6>F24/7 Support</h6>
       </div>
     </section>
-    <!-- ==============Features Section ============= -->
-    <!-- ==================Featured Section =============== -->
+    <!-- ==============Features Section =============-->
+    <!-- ==================Featured Section ===============-->
     <section id="product1" class="section-p1">
       <h2>Featured Section</h2>
       <p>Summer Collection New Modern Design</p>
@@ -213,17 +213,17 @@
         </div>
       </div>
     </section>
-    <!-- ==================Featured Section =============== -->
+    <!-- ==================Featured Section ===============-->
 
-    <!-- ===========Banner Section================== -->
+    <!-- ===========Banner Section==================-->
     <section id="banner" class="section-m1">
       <h4>Repair Service</h4>
       <h2>Up to <span>70% Off</span> - All T-shirt & Accessories</h2>
       <button class="normal">Explore More</button>
     </section>
-    <!-- ===========Banner Section================== -->
+    <!-- ===========Banner Section==================-->
 
-    <!-- ===============New Arrivals=========== -->
+    <!-- ===============New Arrivals===========-->
     <section id="product1" class="section-p1">
       <h2>New Arrivals</h2>
       <p>Summer Collection New Modern Design</p>
@@ -366,6 +366,23 @@
       </div>
     </section>
     <!-- ===============New Arrivals=========== -->
+
+    <!-- =============Action banner Section ================= -->
+    <section id="sm-banner" class="section-p1">
+      <div class="banner-box">
+        <h4>Crazy deals</h4>
+        <h2>Buy 2 Get 1 Free</h2>
+        <span>The best classic dress is on sell by cara</span>
+        <button class="white">Learn More</button>
+      </div>
+      <div class="banner-box banner-box2">
+        <h4>Spring/Summer</h4>
+        <h2>Upcomming Season</h2>
+        <span>The best classic dress is on sell by cara</span>
+        <button class="white">Collection</button>
+      </div>
+    </section>
+    <!-- =============Action banner Section ================= -->
 
     <!-- Javascript Link  -->
     <script src="JS/Script.js"></script>
