--- a/index.html
+++ b/index.html
@@ -384,6 +384,23 @@
     </section>
     <!-- =============Action banner Section ================= -->
 
+    <!-- =============Text Banner Section============= -->
+    <section id="text-banner">
+      <div class="banner-box">
+        <h2>SEASONAL SALE</h2>
+        <h3>Winter Collection -50% OFF</h3>
+      </div>
+      <div class="banner-box banner-box2">
+        <h2>NEW FOOTWEAR COLLECTION</h2>
+        <h3>Spring/Summer 2022</h3>
+      </div>
+      <div class="banner-box banner-box3">
+        <h2>T-SHIRT</h2>
+        <h3>Winter Collection -50% OFF</h3>
+      </div>
+    </section>
+    <!-- =============Text Banner Section============= -->
+
     <!-- Javascript Link  -->
     <script src="JS/Script.js"></script>
   </body>
