--- a/index.html
+++ b/index.html
@@ -400,6 +400,21 @@
       </div>
     </section>
     <!-- =============Text Banner Section============= -->
+    <!-- ============NewsLatter Section============ -->
+    <section id="newslatter" class="section-m1 section-p1">
+      <div class="newlatter-text">
+        <h4>Sign Up For NewsLatter</h4>
+        <p>
+          Get E-mail updates about our latest shop and
+          <span>Special Offer</span>
+        </p>
+      </div>
+      <div class="form">
+        <input type="text" placeholder="Your Email Address" />
+        <button class="normal">Sign Up</button>
+      </div>
+    </section>
+    <!-- ============NewsLatter Section============ -->
 
     <!-- Javascript Link  -->
     <script src="JS/Script.js"></script>
