--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
           <li><a href="Blog.html">Blog</a></li>
           <li><a href="About.html">About</a></li>
           <li><a href="Contact.html">Contact Us</a></li>
-          <li>
+          <li id="lg-bag">
             <a href="Cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
           </li>
+          <i id="close" class="far fa-times-circle"></i>
         </ul>
+      </div>
+      <div id="mobile">
+        <a href="Cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+        <i id="bar" class="fas fa-outdent"></i>
       </div>
     </section>
     <!-- ============Navbar section =========== -->
@@ -415,6 +420,64 @@
       </div>
     </section>
     <!-- ============NewsLatter Section============ -->
+
+    <!-- ===============Footer Section ================ -->
+    <footer class="section-p1">
+      <div class="col">
+        <img class="logo" src="img/logo.png" alt="" />
+        <h4>Contact</h4>
+        <p>
+          <strong>Address :</strong> 562 wellington road, street 32, san
+          francisco
+        </p>
+        <p><strong>Phone :</strong> +01 2222 365 /(+91) 01 2345 6789</p>
+        <p><strong>Hours :</strong> 10:00 - 18:00, Mon - Sat</p>
+        <div class="follow">
+          <h4>Follow Us</h4>
+          <div class="icon">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-pinterest-p"></i>
+            <i class="fab fa-youtube"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <h4>About</h4>
+        <a href="">About Us</a>
+        <a href="">Delivery information</a>
+        <a href="">Privacy Policy</a>
+        <a href="">Terms & Condition</a>
+        <a href="">Contact Us</a>
+      </div>
+
+      <div class="col">
+        <h4>My Account</h4>
+        <a href="">Sign In</a>
+        <a href="">View Cart</a>
+        <a href="">My Wishlist</a>
+        <a href="">Track My Order</a>
+        <a href="">Help</a>
+      </div>
+
+      <div class="col install">
+        <h4>Install App</h4>
+        <p>From App Store or Google Play</p>
+        <div class="row">
+          <img src="img/pay/app.jpg" alt="" />
+          <img src="img/pay/play.jpg" alt="" />
+        </div>
+        <p>Secured Payment Gateway</p>
+        <img src="img/pay/pay.png" alt="" />
+      </div>
+
+      <div class="copyright">
+        <p>@2023, Mehedi Irfan - HTML CSS E-Commerce Template</p>
+      </div>
+    </footer>
+    <!-- ===============Footer Section ================ -->
 
     <!-- Javascript Link  -->
     <script src="JS/Script.js"></script>
