--- a/Shop.html
+++ b/Shop.html
@@ -185,15 +185,7 @@
           </div>
           <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
-      </div>
-    </section>
-    <!-- ==================Featured Section ===============-->
 
-    <!-- ===============New Arrivals===========-->
-    <section id="product1" class="section-p1">
-      <h2>New Arrivals</h2>
-      <p>Summer Collection New Modern Design</p>
-      <div class="pro-container">
         <div class="pro">
           <img src="img/products/n1.jpg" alt="" />
           <div class="des">
@@ -331,7 +323,15 @@
         </div>
       </div>
     </section>
-    <!-- ===============New Arrivals=========== -->
+    <!-- ==================Featured Section ===============-->
+
+    <!-- ===================Product Pagination =================  -->
+    <section id="pagination" class="section-p1">
+      <a href="">1</a>
+      <a href="">2</a>
+      <a href=""><i class="fa-solid fa-right-long"></i></a>
+    </section>
+    <!-- ===================Product Pagination =================  -->
 
     <!-- ============NewsLatter Section============ -->
     <section id="newslatter" class="section-m1 section-p1">
