complete the shop page with single product page

--- a/SingleProduct.html
+++ b/SingleProduct.html
@@ -78,10 +78,107 @@
           </div>
         </div>
       </div>
-      <div></div>
+      <div class="single-product-details">
+        <h6>Home / T-shirt</h6>
+        <h4>Men's Fashion T-shirt</h4>
+        <h2>$139.00</h2>
+        <select>
+          <option>Select Size</option>
+          <option>XXL</option>
+          <option>XL</option>
+          <option>Small</option>
+          <option>Large</option>
+        </select>
+        <input type="number" value="1" />
+        <button class="normal">Add To Cart</button>
+        <h4>Product Details</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor a quam
+          labore, magnam veniam rerum delectus consectetur, nemo maxime pariatur
+          ipsum modi, itaque earum qui adipisci. Dolorum neque tenetur, earum ut
+          est voluptate, cumque explicabo autem non laudantium quae, omnis nihil
+          a commodi nulla velit dicta? Corporis, laudantium neque at repellendus
+          voluptas
+        </p>
+      </div>
     </section>
     <!-- =============Single Product Section ============= -->
-    <!-- ================Header Section ============-->
+
+    <!-- ==================Featured Section ===============-->
+    <section id="product1" class="section-p1">
+      <h2>Featured Section</h2>
+      <p>Summer Collection New Modern Design</p>
+      <div class="pro-container">
+        <div class="pro">
+          <img src="img/products/f1.jpg" alt="" />
+          <div class="des">
+            <span>adidas</span>
+            <h5>Carton Astronaut t-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
+        </div>
+
+        <div class="pro">
+          <img src="img/products/f2.jpg" alt="" />
+          <div class="des">
+            <span>adidas</span>
+            <h5>Carton Astronaut t-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
+        </div>
+
+        <div class="pro">
+          <img src="img/products/f3.jpg" alt="" />
+          <div class="des">
+            <span>adidas</span>
+            <h5>Carton Astronaut t-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
+        </div>
+
+        <div class="pro">
+          <img src="img/products/f4.jpg" alt="" />
+          <div class="des">
+            <span>adidas</span>
+            <h5>Carton Astronaut t-shirts</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <h4>$78</h4>
+          </div>
+          <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
+        </div>
+      </div>
+    </section>
+    <!-- ==================Featured Section ===============-->
 
     <!-- ============NewsLatter Section============ -->
     <section id="newslatter" class="section-m1 section-p1">
