--- a/Shop.html
+++ b/Shop.html
@@ -50,7 +50,7 @@
       <h2>Featured Section</h2>
       <p>Summer Collection New Modern Design</p>
       <div class="pro-container">
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/f1.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -67,7 +67,7 @@
           <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/f2.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -84,7 +84,7 @@
           <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/f3.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -101,7 +101,7 @@
           <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/f4.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -118,11 +118,12 @@
           <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/f5.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
             <h5>Carton Astronaut t-shirts</h5>
+            onclick="window.location.href = 'SingleProduct.html';"
             <div class="star">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
@@ -135,7 +136,7 @@
           <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/f6.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -152,7 +153,7 @@
           <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/f7.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -169,7 +170,7 @@
           <a href=""><i class="fa-sharp fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/f8.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -186,7 +187,7 @@
           <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/n1.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -203,7 +204,7 @@
           <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/n2.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -220,7 +221,7 @@
           <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/n3.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -237,7 +238,7 @@
           <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/n4.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -254,7 +255,7 @@
           <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/n5.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -271,7 +272,7 @@
           <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/n6.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -288,7 +289,7 @@
           <a href=""><i class="fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/n7.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -305,7 +306,7 @@
           <a href=""><i class="fa-sharp fa-solid fa-cart-shopping cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href = 'SingleProduct.html';">
           <img src="img/products/n8.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
