added the all blog section

--- a/Blog.html
+++ b/Blog.html
@@ -23,8 +23,8 @@
       <div>
         <ul id="navbar">
           <li><a href="index.html">Home</a></li>
-          <li><a class="active" href="Shop.html">Shop</a></li>
-          <li><a href="Blog.html">Blog</a></li>
+          <li><a href="Shop.html">Shop</a></li>
+          <li><a class="active" href="Blog.html">Blog</a></li>
           <li><a href="About.html">About</a></li>
           <li><a href="Contact.html">Contact Us</a></li>
           <li id="lg-bag">
@@ -39,11 +39,100 @@
       </div>
     </section>
     <!-- ============Navbar section =========== -->
-    <section id="shop-header">
-      <h2>#StayHome</h2>
-      <p>Save more with coupons & Up to 70% Off!</p>
+    <section id="shop-header" class="blog-header">
+      <h2>#ReadMore</h2>
+      <p>Real all case studies about our products</p>
     </section>
     <!-- ================Header Section ============-->
+
+    <!-- ================Blog Section=============== -->
+    <section id="blogs">
+      <div class="blog-box">
+        <div class="blog-img">
+          <img src="img/blog/b1.jpg" alt="" />
+        </div>
+        <div class="blog-details">
+          <h4>The Cotton Jersey zip-Up Hoodies</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde culpa
+            animi quam facilis quia nobis quis dolorem dolores iste nam.
+          </p>
+          <a href="">CONTINUE READING</a>
+        </div>
+        <h1>13/01</h1>
+      </div>
+      <div class="blog-box">
+        <div class="blog-img">
+          <img src="img/blog/b2.jpg" alt="" />
+        </div>
+        <div class="blog-details">
+          <h4>How to Style a Quiff</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde culpa
+            animi quam facilis quia nobis quis dolorem dolores iste nam.
+          </p>
+          <a href="">CONTINUE READING</a>
+        </div>
+        <h1>13/04</h1>
+      </div>
+      <div class="blog-box">
+        <div class="blog-img">
+          <img src="img/blog/b3.jpg" alt="" />
+        </div>
+        <div class="blog-details">
+          <h4>Must-Have Skater Girl Item</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde culpa
+            animi quam facilis quia nobis quis dolorem dolores iste nam.
+          </p>
+          <a href="">CONTINUE READING</a>
+        </div>
+        <h1>12/01</h1>
+      </div>
+      <div class="blog-box">
+        <div class="blog-img">
+          <img src="img/blog/b4.jpg" alt="" />
+        </div>
+        <div class="blog-details">
+          <h4>Run Way Inspired Trend</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde culpa
+            animi quam facilis quia nobis quis dolorem dolores iste nam.
+          </p>
+          <a href="">CONTINUE READING</a>
+        </div>
+        <h1>16/01</h1>
+      </div>
+      <div class="blog-box">
+        <div class="blog-img">
+          <img src="img/blog/b5.jpg" alt="" />
+        </div>
+        <div class="blog-details">
+          <h4>AM20 Menswear Trends</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde culpa
+            animi quam facilis quia nobis quis dolorem dolores iste nam.
+          </p>
+          <a href="">CONTINUE READING</a>
+        </div>
+        <h1>10/03</h1>
+      </div>
+      <div class="blog-box">
+        <div class="blog-img">
+          <img src="img/blog/b6.jpg" alt="" />
+        </div>
+        <div class="blog-details">
+          <h4>The Cotton Jersey zip-Up Hoodies</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde culpa
+            animi quam facilis quia nobis quis dolorem dolores iste nam.
+          </p>
+          <a href="">CONTINUE READING</a>
+        </div>
+        <h1>13/01</h1>
+      </div>
+    </section>
+    <!-- ================Blog Section=============== -->
 
     <!-- ===================Product Pagination =================  -->
     <section id="pagination" class="section-p1">
