about section app and about section features added

--- a/About.html
+++ b/About.html
@@ -46,6 +46,89 @@
       </p>
     </section>
     <!-- ================Header Section ============-->
+    <!-- ===================About Hear================= -->
+    <section id="about-head" class="section-p1">
+      <img src="img/about/a6.jpg" alt="" />
+      <div>
+        <h2>Who we are?</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis totam
+          quidem asperiores sapiente illo cupiditate non odio aperiam
+          dignissimos voluptatem, veritatis architecto beatae nisi, ratione
+          magni minus aliquid voluptatibus amet? Quia quo culpa doloribus dolore
+          voluptatem hic explicabo voluptatibus animi ullam cupiditate sunt
+          placeat repudiandae, tenetur, reprehenderit praesentium perferendis.
+          Saepe.
+        </p>
+
+        <abbr title=""
+          >ratione magni minus aliquid voluptatibus amet? Quia quo culpa
+          doloribus dolore voluptatem hic explicabo voluptatibus animi ullam
+          cupiditate sunt</abbr
+        >
+        <br /><br />
+        <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%"
+          >ratione magni minus aliquid voluptatibus amet? Quia quo culpa
+          doloribus dolore voluptatem hic explicabo voluptatibus animi ullam
+          cupiditate sunt</marquee
+        >
+      </div>
+    </section>
+    <!-- ===================About Hear================= -->
+
+    <!-- ============About section Video=========== -->
+    <section id="about-app" class="section-p1">
+      <h1>Download Our <a href="#">App</a></h1>
+      <div class="video">
+        <video autoplay muted loop src="img/about/1.mp4"></video>
+      </div>
+    </section>
+    <!-- ============About section Video=========== -->
+
+    <!-- ==============Features Section =============-->
+    <section id="features" class="section-p1">
+      <div class="fea-box">
+        <img src="img/features/f1.png" alt="" />
+        <h6>Free Shipping</h6>
+      </div>
+      <div class="fea-box">
+        <img src="img/features/f2.png" alt="" />
+        <h6>Online Order</h6>
+      </div>
+      <div class="fea-box">
+        <img src="img/features/f3.png" alt="" />
+        <h6>Save Money</h6>
+      </div>
+      <div class="fea-box">
+        <img src="img/features/f4.png" alt="" />
+        <h6>Promotions</h6>
+      </div>
+      <div class="fea-box">
+        <img src="img/features/f5.png" alt="" />
+        <h6>Happy Sell</h6>
+      </div>
+      <div class="fea-box">
+        <img src="img/features/f6.png" alt="" />
+        <h6>F24/7 Support</h6>
+      </div>
+    </section>
+    <!-- ==============Features Section =============-->
+
+    <!-- ============NewsLatter Section============ -->
+    <section id="newslatter" class="section-m1 section-p1">
+      <div class="newlatter-text">
+        <h4>Sign Up For NewsLatter</h4>
+        <p>
+          Get E-mail updates about our latest shop and
+          <span>Special Offer</span>
+        </p>
+      </div>
+      <div class="form">
+        <input type="text" placeholder="Your Email Address" />
+        <button class="normal">Sign Up</button>
+      </div>
+    </section>
+    <!-- ============NewsLatter Section============ -->
 
     <!-- ===============Footer Section ================ -->
     <footer class="section-p1">
