contact deatils added

--- a/Contact.html
+++ b/Contact.html
@@ -45,6 +45,45 @@
     </section>
     <!-- ================Header Section ============-->
 
+    <!-- =========Contact Details Section================ -->
+    <section id="contacts" class="section-p1">
+      <div class="contact-details">
+        <span>GET IN TOUCH</span>
+        <h1>Visit one of our agency locations or contact us today</h1>
+        <h3>Head Office</h3>
+        <div>
+          <li>
+            <i class="fas fa-map"></i>
+            <p>56 Glassford street glasgow G1 1UL New York</p>
+          </li>
+          <li>
+            <i class="far fa-envelope"></i>
+            <p>contact@exmple.com</p>
+          </li>
+          <li>
+            <i class="fas fa-phone-alt"></i>
+            <p>+009 8562 452 6521</p>
+          </li>
+          <li>
+            <i class="far fa-clock"></i>
+            <p>Monday to Saturday: 9.00am to 16.00am</p>
+          </li>
+        </div>
+      </div>
+      <div class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3417.887380639248!2d121.20624831477679!3d31.057234576972313!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35b2f46810a834f9%3A0xe76dd35c518eac48!2sShanghai%20University%20of%20Engineering%20Science!5e0!3m2!1sen!2sbd!4v1677923642216!5m2!1sen!2sbd"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+    </section>
+    <!-- =========Contact Details Section================ -->
+
     <!-- ============NewsLatter Section============ -->
     <section id="newslatter" class="section-m1 section-p1">
       <div class="newlatter-text">
