complete the contact form section

--- a/Contact.html
+++ b/Contact.html
@@ -84,6 +84,55 @@
     </section>
     <!-- =========Contact Details Section================ -->
 
+    <!-- ==========Form Details================ -->
+    <section id="form-details">
+      <form action="">
+        <span>LEAVE A MESSAGE</span>
+        <h1>We Love To hear from you</h1>
+        <input type="text" placeholder="Your Name" />
+        <input type="email" placeholder="Your E-mail" />
+        <input type="text" placeholder="Write Subject" />
+        <textarea placeholder="Your Message"></textarea>
+        <button class="normal">Submit</button>
+      </form>
+      <div class="contact-people">
+        <div>
+          <img src="img/people/1.png" alt="" />
+          <p>
+            <span>John Doe</span>
+            Senior Marketing Manager
+            <br />
+            Phone: +00 8523 254 3655
+            <br />
+            E-mail: example@example.com
+          </p>
+        </div>
+        <div>
+          <img src="img/people/2.png" alt="" />
+          <p>
+            <span>William Smith</span>
+            Senior Marketing Manager
+            <br />
+            Phone: +00 8523 254 3655
+            <br />
+            E-mail: example@example.com
+          </p>
+        </div>
+        <div>
+          <img src="img/people/3.png" alt="" />
+          <p>
+            <span>Emma Stone</span>
+            Senior Marketing Manager
+            <br />
+            Phone: +00 8523 254 3655
+            <br />
+            E-mail: example@example.com
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- ==========Form Details================ -->
+
     <!-- ============NewsLatter Section============ -->
     <section id="newslatter" class="section-m1 section-p1">
       <div class="newlatter-text">
