--- a/Cart.html
+++ b/Cart.html
@@ -47,6 +47,55 @@
     </section>
     <!-- ================Header Section ============-->
 
+    <!-- ======================Cart Table============= -->
+    <section id="cart" class="section-p1">
+      <table width="100%">
+        <thead>
+          <tr>
+            <td>Remove</td>
+            <td>Image</td>
+            <td>Product</td>
+            <td>Price</td>
+            <td>Quantity</td>
+            <td>SubTotal</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <a href="#"><i class="far fa-times-circle"></i></a>
+            </td>
+            <td><img src="img/products/f1.jpg" alt="" /></td>
+            <td>Cartons astronauts t-shirt</td>
+            <td>$118.16</td>
+            <td><input type="number" value="1" id="" /></td>
+            <td>$118.16</td>
+          </tr>
+          <tr>
+            <td>
+              <a href="#"><i class="far fa-times-circle"></i></a>
+            </td>
+            <td><img src="img/products/f2.jpg" alt="" /></td>
+            <td>Cartons astronauts t-shirt</td>
+            <td>$208.00</td>
+            <td><input type="number" value="2" id="" /></td>
+            <td>$208.00</td>
+          </tr>
+          <tr>
+            <td>
+              <a href="#"><i class="far fa-times-circle"></i></a>
+            </td>
+            <td><img src="img/products/f3.jpg" alt="" /></td>
+            <td>Cartons astronauts t-shirt</td>
+            <td>$96.50</td>
+            <td><input type="number" value="1" id="" /></td>
+            <td>$96.50</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <!-- ======================Cart Table============= -->
+
     <!-- ============NewsLatter Section============ -->
     <section id="newslatter" class="section-m1 section-p1">
       <div class="newlatter-text">
