--- a/Cart.html
+++ b/Cart.html
@@ -96,6 +96,37 @@
     </section>
     <!-- ======================Cart Table============= -->
 
+    <!-- ==================Cart Coupon section=============== -->
+    <section id="cart-coupon" class="section-p1">
+      <div class="coupon">
+        <h3>Apply Coupon</h3>
+        <div>
+          <input type="text" placeholder="Enter Your Coupon" />
+          <button class="normal">Apply</button>
+        </div>
+      </div>
+
+      <div class="subtotal">
+        <h3>Cart Totals</h3>
+        <table>
+          <tr>
+            <td>Cart Subtotal</td>
+            <td>$335</td>
+          </tr>
+          <tr>
+            <td>Shipping</td>
+            <td>Free</td>
+          </tr>
+          <tr>
+            <td><strong>Total</strong></td>
+            <td><strong>$335</strong></td>
+          </tr>
+        </table>
+        <button class="normal">Proceed to Checkout</button>
+      </div>
+    </section>
+    <!-- ==================Cart Coupon section=============== -->
+
     <!-- ============NewsLatter Section============ -->
     <section id="newslatter" class="section-m1 section-p1">
       <div class="newlatter-text">
